asg/tests/fail/integers/u8/min_fail.leo
function main() {
    let a: u8 = -1;
}